--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,29 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <title>React App</title>
+    <style>
+  body.dark-theme {
+    background-color: #121212 !important;
+    color: #ffffff !important;
+  }
+  
+  body.dark-theme .section-title {
+    color: #ffffff !important;
+  }
+  
+  body.dark-theme .about-text,
+  body.dark-theme .about-stats {
+    background: linear-gradient(#1e1e1e, #1e1e1e) padding-box, 
+                linear-gradient(135deg, #8a2be2, #4a5568) border-box !important;
+    color: #ffffff !important;
+  }
+  
+  body.dark-theme .portfolio-item,
+  body.dark-theme .hobbies-item {
+    background-color: #1e1e1e !important;
+    color: #ffffff !important;
+  }
+</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
